--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       >
   </script>
   <script>
-    const socket = io("http://localhost:8080");
+    const socket = io("https://react-socket-server-pedro.herokuapp.com/");
 
     // Referencias al elemento DOM - salto al dom una vez
     const formulario = document.querySelector('#miFormulario');
