Se agregan modificaciones de socket para app bandnames y se deja minichat como alternativa en la carpeta publica del backend

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     />
   </head>
   <body class="container text-light bg-dark">
-
+    <a href="minichat.html" class="link-info">Ir a Minichat</a>
     <h1 class="mt-5">Acceso denegado</h1>
+
     <hr>
 
   </body>
