se añade codigo necesario para ejemplo de app de tickets

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         // Para escuchar
         socket.on('current-bands', (data) => {
             // callback a ejecutar
-            console.log(data);
+            // console.log(data);
         });
 
 
